--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,6 @@
 version: '3'
 services:
-  NGINX: 
-     image: nginx:1.14.2
-     ports:
-       - containerPort: 80
-		
-		
-	
+  server:
+    image: nginx:latest
+    ports:
+      - 3000:80
