--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,7 @@
-version: '2'
+version: '3.9'
 services:
-  server:
-    image: nginx:latest
+  apache:
+    image: httpd:latest
+    container_name: my-apache-app
     ports:
-      - 3000:80
+    - '8081:80'
